--- a/package.json
+++ b/package.json
@@ -5,19 +5,22 @@
   "description": "Личный проект «Кексобукинг» от HTML Academy",
   "repository": {
     "type": "git",
-    "url": "git@github.com:htmlacademy-javascript/1455563-keksobooking-21.git"
+    "url": "git@github.com:htmlacademy-javascript/181412-keksobooking-21.git"
   },
   "bugs": {
-    "url": "https://github.com/htmlacademy-javascript/1455563-keksobooking-21/issues"
+    "url": "https://github.com/htmlacademy-javascript/181412-keksobooking-21/issues"
   },
   "devDependencies": {
     "eslint": "7.1.0",
-    "eslint-config-htmlacademy": "0.6.0"
+    "eslint-config-htmlacademy": "0.6.0",
+    "webpack": "5.3.0",
+    "webpack-cli": "4.1.0"
   },
   "license": "MIT",
   "dependencies": {},
   "scripts": {
-    "test": "eslint js/"
+    "test": "eslint js/",
+    "build": "webpack --mode production"
   },
   "engines": {
     "node": "8.11"
